--- a/datacollection/user_app/backend/info_files/db_versions/v_3/Breakfast Burritos.yaml
+++ b/datacollection/user_app/backend/info_files/db_versions/v_3/Breakfast Burritos.yaml
@@ -239,7 +239,7 @@
     modified_description: Microwave-Microwave for 1.5 minutes
   - description: Sprinkle-Sprinkle oregano in the bowl
     errors:
-    - description: Splash some oregano
+    - description: Splash some oregano outside the bowl
       tag: Technique Error
     modified_description: Sprinkle-Sprinkle oregano in the bowl, but some of them
       splash outside
@@ -264,9 +264,6 @@
   - description: Roll-Roll the tortilla from one end to another into a log shape,
       about 1.5 inches thick. Roll it tight enough to prevent gaps but not so tight
       that the filling leaks
-    errors:
-    - description: 'Null'
-      tag: Temperature Error
 - activity_id: 7
   environment: 10
   errors:
@@ -306,20 +303,20 @@
   - description: Whisk-Whisk the egg
   - description: Microwave-Microwave for 3 minutes, stirring in between
     errors:
-    - description: 2 mins
+    - description: 2 mins instead of 3 mins
       tag: Timing Error
   - description: Sprinkle-Sprinkle oregano in the bowl
     errors:
-    - description: Basil
+    - description: Basil instead of oregano
       tag: Preparation Error
   - description: Add-Add 1 tbsp salsa to the bowl
   - description: Add-Add 1/2 tbsp sweet and sour sauce to the bowl
     errors:
-    - description: 1 tbsp
+    - description: 1 tbsp instead of 1/2 tbsp
       tag: Measurement Error
   - description: Mix-Mix the contents of the bowl well
     errors:
-    - description: Not that well
+    - description: Do not mix contents of the bowl that well
       tag: Technique Error
   - description: Sprinkle-Sprinkle 1 tbsp shredded cheddar cheese on top of the egg
 - activity_id: 7
@@ -362,14 +359,14 @@
   - description: Microwave-Microwave for 3 minutes, stirring in between
     errors:
     - description: No stirring in between
-      tag: Technique Error
-    - description: 1.5 instead  of 3
+      tag: Preparation Error
+    - description: 1.5 instead  of 3 mins
       tag: Timing Error
     modified_description: Microwave-Microwave for 1.5 minutes, no stirring in between
   - description: Place-Place 8 inch tortilla on a cutting board
   - description: Add-Add 1/2 tbsp sweet and sour sauce to the bowl
     errors:
-    - description: 1 instead of 1/2
+    - description: 1 tbsp instead of 1/2 tbsp of sweet and sour sauce
       tag: Measurement Error
     modified_description: Add-Add 1 tbsp sweet and sour sauce to the bowl
   - description: Sprinkle-Sprinkle oregano in the bowl
@@ -378,11 +375,6 @@
   - description: Roll-Roll the tortilla from one end to another into a log shape,
       about 1.5 inches thick. Roll it tight enough to prevent gaps but not so tight
       that the filling leaks
-    errors:
-    - description: 'Null'
-      tag: Temperature Error
-    - description: NONE
-      tag: Preparation Error
 - activity_id: 7
   environment: 1
   errors:
@@ -437,6 +429,11 @@
     - description: Sprinkle basil instead of oregano
       tag: Preparation Error
     modified_description: Sprinkle-Sprinkle basil in the bowl
+  - description: Place-Place 8 inch tortilla on a cutting board
+    errors:
+    - description: Use plate instead of cutting board
+      tag: Preparation Error
+    modified_description: Place-Place 8 inch tortilla on a plate
   - description: Pour-Pour egg mixture on top of the tortilla
   - description: Sprinkle-Sprinkle 1 tbsp shredded cheddar cheese on top of the egg
     errors:
@@ -451,13 +448,6 @@
     modified_description: Roll-Roll the tortilla from one end to another into a log
       shape improperly, about 1.5 inches thick. Roll it loosely so that the filling
       leaks
-  - description: Place-Place 8 inch tortilla on a cutting board
-    errors:
-    - description: 'NULL'
-      tag: Temperature Error
-    - description: Step doesnot make sense
-      tag: Missing Step
-    modified_description: '[]'
 - activity_id: 7
   environment: 1
   errors:
@@ -490,16 +480,14 @@
   - description: Place-Place 8 inch tortilla on a cutting board
   - description: Microwave-Microwave for 3 minutes, stirring in between
     errors:
-    - description: 2 mins
+    - description: 2 mins instead of 3 mins
       tag: Timing Error
     - description: without stirring in between
-      tag: Technique Error
-    - description: no enough heating time --> no enough temperature
-      tag: Temperature Error
+      tag: Preparation Error
     modified_description: Microwave-Microwave for 2 minutes, without stirring in between
   - description: Add-Add 1/2 tbsp sweet and sour sauce to the bowl
     errors:
-    - description: not sweet and sour sauce
+    - description: add marinara sauce instead of sweet and sour sauce
       tag: Preparation Error
     - description: 1 tbsp instead of 1/2 tbsp
       tag: Measurement Error
@@ -550,33 +538,29 @@
     errors:
     - description: broken egg with shells
       tag: Technique Error
-    - description: broken egg with shells
-      tag: Preparation Error
     modified_description: Extract and add contents of an egg to a microwave-safe bowl
   - description: Whisk-Whisk the egg
   - description: Microwave-Microwave for 3 minutes, stirring in between
     errors:
     - description: no stirring in between
-      tag: Technique Error
+      tag: Preparation Error
     - description: 2 mins
       tag: Timing Error
-    - description: '2 mins '
-      tag: Temperature Error
     modified_description: Microwave for 2 minutes, no stirring in between
   - description: Add-Add 1/2 tbsp sweet and sour sauce to the bowl
     errors:
-    - description: 1 tbsp
+    - description: 1 tbsp instead of 1/2 tbsp
       tag: Measurement Error
     modified_description: Add 1 tbsp sweet and sour sauce to the bowl
   - description: Add-Add 1 tbsp salsa to the bowl
   - description: Sprinkle-Sprinkle oregano in the bowl
     errors:
-    - description: pour
+    - description: pour instead of sprinkling
       tag: Technique Error
     modified_description: pour oregano in the bowl
   - description: Mix-Mix the contents of the bowl well
     errors:
-    - description: not very well...
+    - description: Do not mix very well
       tag: Technique Error
     modified_description: Mix the contents of the bowl but not that well
   - description: Pour-Pour egg mixture on top of the tortilla
@@ -619,11 +603,9 @@
     errors:
     - description: 2 mins
       tag: Timing Error
-    - description: 2 mins
-      tag: Temperature Error
     - description: no stirring
-      tag: Technique Error
-    modified_description: Microwave for 2 minutes
+      tag: Preparation Error
+    modified_description: Microwave for 2 minutes without stirring
   - description: Add-Add 1 tbsp salsa to the bowl
   - description: Whisk-Whisk the egg
   - description: Sprinkle-Sprinkle oregano in the bowl
@@ -631,13 +613,11 @@
   - description: Pour-Pour egg mixture on top of the tortilla
   - description: Sprinkle-Sprinkle 1 tbsp shredded cheddar cheese on top of the egg
     errors:
-    - description: 1/2 tbsp
+    - description: 1/2 tbsp instead of 1 tbsp
       tag: Measurement Error
-    - description: pour
+    - description: pour instead of sprinkle
       tag: Technique Error
-    - description: 1/2 tbsp
-      tag: Preparation Error
-    modified_description: Pour 1 tbsp shredded cheddar cheese on top of the egg
+    modified_description: Pour 1/2 tbsp shredded cheddar cheese on top of the egg
   - description: Roll-Roll the tortilla from one end to another into a log shape,
       about 1.5 inches thick. Roll it tight enough to prevent gaps but not so tight
       that the filling leaks
@@ -672,14 +652,14 @@
   - description: add-Extract and add contents of an egg to a microwave-safe bowl
     errors:
     - description: While breaking the egg leave tiny pieces of egg shell.
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: Add-Extract (leave tiny shells in the bowl) and add contents
       of an egg to a microwave-safe bowl
   - description: Place-Place 8 inch tortilla on a cutting board
   - description: Whisk-Whisk the egg
     errors:
     - description: Spilling the egg contents while mixing.
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: Whisk-Whisk the egg and spill some contents out.
   - description: Microwave-Microwave for 3 minutes, stirring in between
     errors:
@@ -703,13 +683,13 @@
       that the filling leaks
     errors:
     - description: Rolling it tighly and leak some contents.
-      tag: Preparation Error
-    modified_description: ' Roll-Roll the tortilla from one end to another into a
-      log shape, about 1.5 inches thick. Roll it so tight that the filling leaks.'
+      tag: Technique Error
+    modified_description: Roll-Roll the tortilla from one end to another into a
+      log shape, about 1.5 inches thick. Roll it so tight that the filling leaks
   - description: Sprinkle-Sprinkle oregano in the bowl
     errors:
     - description: Sprinking on the countertop also.
-      tag: Preparation Error
+      tag: Technique Error
     modified_description: Sprinkle-Sprinkle oregano in the bowl and on countertop
       also.
   - description: Mix-Mix the contents of the bowl well
@@ -721,8 +701,6 @@
     errors:
     - description: Adding 2 tbsp instead of 1 tbsp.
       tag: Measurement Error
-    - description: 'NULL'
-      tag: Temperature Error
     modified_description: Add-Add 2 tbsp salsa to the bowl
 - activity_id: 7
   environment: 1
@@ -778,6 +756,11 @@
     - description: Sprinkle basil instead of oregano
       tag: Preparation Error
     modified_description: Sprinkle-Sprinkle basil in the bowl
+  - description: Place-Place 8 inch tortilla on a cutting board
+    errors:
+    - description: use plate instead of cutting board
+      tag: Preparation Error
+    modified_description: Place-Place 8 inch tortilla on a plate
   - description: Pour-Pour egg mixture on top of the tortilla
   - description: Sprinkle-Sprinkle 1 tbsp shredded cheddar cheese on top of the egg
     errors:
@@ -792,10 +775,4 @@
     modified_description: Roll-Roll the tortilla from one end to another into a log
       shape improperly, about 1.5 inches thick. Roll it loosely so that the filling
       leaks
-  - description: Place-Place 8 inch tortilla on a cutting board
-    errors:
-    - description: 'NULL'
-      tag: Temperature Error
-    - description: Step doesnot make sense
-      tag: Missing Step
-    modified_description: '[]'
+
